--- a/groth1.tex
+++ b/groth1.tex
@@ -7857,7 +7857,8 @@ proof of Proposition \ref{prop.BK=BK}.
 \end{proof}
 
 \begin{todo}
-Prove this (well, sketch a proof).
+Can you follow the above argument? (Preferrably at 3AM and/or under the
+influence.)
 \end{todo}
 
 
