--- a/groth1.tex
+++ b/groth1.tex
@@ -7867,7 +7867,7 @@ influence.)
 \def\cut{{\operatorname*{cut}}} % what would be a good notation here? same question for the below:
 \def\ceq{{\operatorname*{ceq}}}
 \def\ircont{{\operatorname*{ircont}}}
-\def\ceqvar{{{ceq}}} %??
+\def\ceqvar{{{\alpha}}} %??
 \def\cutvar{{{\nu}}} % ???
 \def\supp{{\operatorname*{supp}}}
 \def\NS{{\operatorname*{NS}}}
@@ -7882,26 +7882,35 @@ influence.)
 \def\OneTwoRPPCutvar{{\operatorname*{RPP}^{12}\left(  \lambda/\mu ;\cutvar \right)}}
 \def\flip{{\operatorname*{flip}}}
 
-In this section, we restrict ourselves to the two-variable dual-stable Grothendieck polynomial $\g_\lm(x_1,x_2,0,0,\dots;\t)$. We can represent it as a polynomial in $\t$ with coefficients in $\Z[x_1,x_2]$:
+In this section, we let $\kk$ be the polynomial ring
+$\Z\left[t_1, t_2, t_3, \ldots\right]$ in countably many
+indeterminates, and we restrict ourselves to the
+two-variable dual-stable Grothendieck polynomial
+$\g_\lm(x_1,x_2,0,0,\dots;\t)$ defined as the result of
+substituting $0, 0, 0, \ldots$ for $x_3, x_4, x_5, \ldots$
+in $\g_\lm$. We can represent it as a polynomial in
+$\t$ with coefficients in $\Z[x_1,x_2]$:
 $$\g_\lm(x_1,x_2,0,0,\dots;\t)=\sum_{\ceqvar\in \N^{\N_+}}\t^\ceqvar Q_\ceqvar(x_1,x_2).$$
 We show that each $Q_\ceqvar(x_1,x_2)$ is either zero or has a form
 $$Q_\ceqvar(x_1,x_2)=(x_1x_2)^{M} P_{n_0}(x_1,x_2)P_{n_1}(x_1,x_2)\dots P_{n_r}(x_1,x_2) ,$$
 where $M,r$ and $n_0,n_1,\dots,n_{r}$ are integers naturally associated to $\ceqvar$ and $\lm$ and 
 $$P_n(x_1,x_2)=(x_1^{n+1}-x_2^{n+1})/(x_1-x_2)=x_1^{n}+x_1^{n-1}x_2+\dots+x_1x_2^{n-1}+x_2^n.$$
-We fix the skew-shape $\lm$ throughout the whole section and let $W(\lm)$ be the number of columns in $\lm$. We will have a running example with $\lambda=(7,7,7,4,4)$ and $\mu=(5,3,2)$.
+We fix the skew partition $\lm$ throughout the whole section and let $W(\lm)$ be the number of columns in $\lm$.
+Abusing notation, we shall abbreviate $Y\left(\lm\right)$ as $\lm$.
+We will have a running example with $\lambda=(7,7,7,4,4)$ and $\mu=(5,3,2)$.
 
 
 
 \subsection{Irreducible components}
-Given a rpp $T$, consider the set $\NS(T)$ of all cells $(i,j)\in \lm$ such that $T(i,j)=1$ but $T(i+1,j)=2$ (in other words, $\NS(T)$ is the set of all non-stangant cells in $T$ filled with a $1$). Clearly, $\NS(T)$ contains at most one cell from each column, so denote $\NS(T)=\{(i_1,j_1),(i_2,j_2),\dots,(i_s,j_s)\}$ with $j_1<j_2<\dots<j_s$. Because $T$ is a 12-rpp, it follows that the numbers $i_1,i_2,\dots,i_s$ decrease weakly, therefore they form a partition which we call \textit{the cut-partition of} $T$ and denote 
+Given a rpp $T$, consider the set $\NS(T)$ of all cells $(i,j)\in \lm$ such that $T(i,j)=1$ but $T(i+1,j)=2$ (in other words, $\NS(T)$ is the set of all non-stagnant cells in $T$ filled with a $1$). Clearly, $\NS(T)$ contains at most one cell from each column; thus, let us write $\NS(T)=\{(i_1,j_1),(i_2,j_2),\dots,(i_s,j_s)\}$ with $j_1<j_2<\dots<j_s$. Because $T$ is a 12-rpp, it follows that the numbers $i_1,i_2,\dots,i_s$ decrease weakly, therefore they form a partition which we call \textit{the cut-partition of} $T$ and denote 
 $$\cut(T):=(i_1,i_2,\dots,i_s).$$ 
 An example of calculation of $\cut(T)$ and $\NS(T)$ is illustrated on Figure \ref{fig:cut}.
 
 \def\one{{\mathbf{1}}}
-\def\two{{\mathbf{1}}}
+\def\two{{\mathbf{2}}}
 
 \begin{figure}
-\begin{tabular}{cc}
+\begin{tabular}{c|c}
  & \\
 \begin{ytableau}
 \none& \none& \none&\none&\none & 1   & 2 \\
@@ -7965,34 +7974,34 @@ Because $\supp(i_r)\subset[a,b)$, we have $(i_r,a-1)\notin\lm$ so placing a one 
   \item for all $0\leq k \leq r$, $\nuxy{b_k}{a_{k+1}}$ is irreducible.
  \end{itemize}
 \end{lemma}\qed
-\begin{defi}
+\begin{definition}
  In the context of Lemma \ref{lemma:irreducible}, for $0\leq k\leq r$ the subpartitions $\nuxy{b_k}{a_{k+1}}$ are called \textit{the irreducible components of $\cutvar$} and the numbers $n_k:=a_{k+1}-b_k-\#\nuxy{b_k}{a_{k+1}}$ are called their \textit{degrees}  (for $T$ with $\cut(T)=\cutvar$, the $k$-th degree $n_k$ is equal to the number of pure columns of $T$ inside the corresponding $k$-th irreducible component).
-\end{defi}
+\end{definition}
 \begin{remark}
  Note that the conditions on $b_0,a_1,\dots,a_{r+1}$ guarantee that $\cutvar$ is just a concatenation of partitions $\nuxy{b_0}{a_1},\nuxy{a_1}{b_1},\dots,\nuxy{b_r}{a_{r+1}}$. 
 \end{remark}
 
-\begin{exmp}
+\begin{example}
  For $\cutvar=(4,3,3,2)$ we have $r=1,b_0=1,a_1=3,b_1=5,a_2=8$. The irreducible components of $\cutvar$ are $(4)$ and $(2)$ and their degrees are $3-1-1=1$ and $8-5-1=2$ respectively. We have $\nuxy{1}{3}=(4),\nuxy{3}{5}=(3,3),\nuxy{5}{8}=(2)$.
-\end{exmp}
+\end{example}
 
 
 \subsection{The structural theorem and its applications}
 It is easy to see that for a 12-rpp $T$, $\#\cut(T)$ is equal to the number of mixed columns in $T$. Also, by $\OneTwoRPP$ denote the set of all 12-rpps $T$ of shape $\lm$ and by $\OneTwoRPPCutvar$ denote its subset that contains only 12-rpps $T$ with $\cut(T)=\cutvar$. Now we are ready to state a theorem that completely describes the structure of irreducible components:
-\begin{theo}
+\begin{theorem}
 \label{thm:12rpps}
  Let $\cutvar$ be an irreducible partition. Then for all $0\leq m\leq W(\lm)-\#\cutvar$ there is exactly one 12-rpp $T\in\OneTwoRPPCutvar$ with $\#\cutvar$ mixed columns, $m$ $1$-pure columns and $(W(\lm)-\#\cutvar-m)$ $2$-pure columns. Moreover, these are the only elements of $\OneTwoRPPCutvar$. In other words, for an irreducible partition $\cutvar$ we have
   \begin{equation}
  \label{eq:thm12rpps}
  \sum_{T\in\OneTwoRPPCutvar} x^{\ircont(T)}=(x_1x_2)^{\#\cutvar} P_{W(\lm)-\#\cutvar}(x_1,x_2).
  \end{equation}
-\end{theo}
+\end{theorem}
 
-\begin{exmp}
- Each of the two 12-rpps on Figure \ref{fig:cut} has two irreducible components. One of them is supported on the first two columns and the other one is supported on the last three columns. All possible 12-rpps for each component are depicted on Figure \ref{fig:irr}.
+\begin{example}
+ Each of the two 12-rpps on Figure \ref{fig:cut} has two irreducible components. One of them is supported on the first two columns and the other one is supported on the last three columns. Here are all possible 12-rpps for each component:
  
-\begin{figure}
-\begin{tabular}{cc}
+%\begin{figure}
+\begin{tabular}{c|c}
 \begin{tabular}{cc}
  & \\
 \begin{ytableau}
@@ -8023,13 +8032,13 @@ It is easy to see that for a 12-rpp $T$, $\#\cut(T)$ is equal to the number of m
 \end{tabular}\\
 $\lambda=(2,2);\ \mu=();\ \cutvar=(1)$ & $\lambda=(3,3,3);\ \mu=(1);\ \cutvar=(2)$. 
 \end{tabular}\\
-\caption{\label{fig:irr} Irreducible components and all possible 12-rpps for them}
-\end{figure}
-\end{exmp}
+%\caption{\label{fig:irr} Irreducible components and all possible 12-rpps for them}
+%\end{figure}
+\end{example}
 
 
 After decomposing into irreducible components, we can obtain a formula for general reducible partitions:
-\begin{coro}
+\begin{corollary}
  Let $\cutvar$ be a representable partition. Then
   \begin{equation}
   \label{eq:thm12rppsComposite}
@@ -8037,30 +8046,30 @@ After decomposing into irreducible components, we can obtain a formula for gener
   \end{equation}
 
   where the numbers $M,r,n_0,\dots,n_r$ are defined above: $M=\#\cutvar$, $r+1$ is the number of irreducible components of $\cutvar$ and $n_0,n_1,\dots,n_r$ are their degrees.
-\end{coro}
+\end{corollary}
 
  For a 12-rpp $T$, the vectors $\cut(T)$ and $\ceq(T)$ uniquely determine each other: if $(\ceq(T))_i=h$ then $\cut(T)$ contains exactly $\lambda_{i+1}-\mu_i-h$ entries equal to $i$, and this correspondence is one-to-one. Therefore, the polynomials on both sides of (\ref{eq:thm12rppsComposite}) are equal to $Q_{\ceqvar}(x_1,x_2)$ where the vector $\ceqvar$ is the one that corresponds to $\cutvar$.
 
  Note that the polynomials $P_n(x_1,x_2)$ are symmetric for all $n$. Since the question about the symmetry of $\g$ can be reduced to the two-variable case, Theorem \ref{thm:12rpps} gives an alternative proof of the symmetry of $\g$:
-\begin{coro}
+\begin{corollary}
  The polynomials $\g(x_1,x_2,x_3,\dots;\t)$ are symmetric in $(x_1,x_2,x_3\dots)$.
-\end{coro}
+\end{corollary}
 
 Another application of Theorem \ref{thm:12rpps} is a complete description of Bender-Knuth involutions on rpps.
 
-\begin{coro}
+\begin{corollary}
 \label{cor:uniqueBK}
 Let $\cutvar$ be an irreducible partition. Then there is a unique map $b:\OneTwoRPPCutvar\to\OneTwoRPPCutvar$ such that for all $T\in\OneTwoRPPCutvar$ we have 
 $$\ircont(T)=(c_1,c_2,0,0,\dots)\Longrightarrow \ircont(b(T))=(c_2,c_1,0,0,\dots).$$
 In this case, such a map is an involution on $\OneTwoRPPCutvar$. So, for irreducible partition $\cutvar$ the corresponding Bender-Knuth involution exists and is unique.
-\end{coro}
+\end{corollary}
 
 Take any 12-rpp $T\in\OneTwoRPPCutvar$ and recall that a 12-table $\flip(T)$ is obtained from $T$ by simultaneously replacing all entries in $1$-pure columns by $2$ and all entries in $2$-pure columns by $1$. 
 
-\begin{coro}
+\begin{corollary}
 \label{cor:confluence}
  If $\cutvar$ is an irreducible partition, then no matter in which order one resolves conflicts in $\flip(T)$, the resulting tableau $T'$ will be the same. The map $T\to T'$ is the unique Bender-Knuth involution on $\OneTwoRPPCutvar$.
-\end{coro}
+\end{corollary}
 \begin{proof}[Proof of Corollary \ref{cor:confluence}]
  By Proposition \ref{prop.finality}, conflict-resolving steps applied in any order give an element of $\OneTwoRPPCutvar$. So we get a map $\OneTwoRPPCutvar\to \OneTwoRPPCutvar$ that satisfies the assumptions of Corollary \ref{cor:uniqueBK}.
 \end{proof}
@@ -8068,9 +8077,9 @@ Take any 12-rpp $T\in\OneTwoRPPCutvar$ and recall that a 12-table $\flip(T)$ is 
 
 Finally, notice that for a general representable partition $\cutvar$ conflicts may only occur inside each irreducible component independently, so we conclude the chain of corollaries by stating that our constructed involutions are canonical in the following sense:
 
-\begin{coro}
+\begin{corollary}
  For a representable partition, the map $\mathbf{B}:\OneTwoRPPCutvar\to\OneTwoRPPCutvar$ is the unique involution that interchanges the number of $1$-pure columns with the number of $2$-pure columns inside each irreducible component.
-\end{coro}
+\end{corollary}
 
 \subsection{The proof}
 Recall that $\cutvar=(i_1,\dots,i_s)$ is an irreducible partition. We start with the following simple observation:
@@ -8085,7 +8094,7 @@ Therefore the set $\NS(T)$ contains $\{(i_1,a+1),(i_2,a+2),\dots,(i_{b-1-a},b-1)
 
 
 \begin{proof}[Proof of Theorem \ref{thm:12rpps}]
-We proceed by induction on the number of columns in $\lm$. If the number of columns is one then the statement of Theorem \ref{thm:12rpps} is obvious. Suppose that we have proven that for all skew-shapes $\widetilde{\lm}$ with less than $W(\lm)$ columns and for all $\widetilde{\lm}$-irreducible partitions $\widetilde\cutvar$ and for all $0\leq \widetilde m\leq W(\widetilde{\lm})-\#\widetilde\cutvar$, there is exactly one 12-rpp $\widetilde T$ of shape $\widetilde{\lm}$ with exactly $\widetilde m$ $1$-pure columns, exactly $\#\widetilde\cutvar$ mixed columns and exactly $(W(\widetilde{\lm})-\#\widetilde\cutvar-\widetilde m)$ $2$-pure columns. Now we want to prove the same for $\lm$.
+We proceed by induction on the number of columns in $\lm$. If the number of columns is one then the statement of Theorem \ref{thm:12rpps} is obvious. Suppose that we have proven that for all skew partitions $\widetilde{\lm}$ with less than $W(\lm)$ columns and for all $\widetilde{\lm}$-irreducible partitions $\widetilde\cutvar$ and for all $0\leq \widetilde m\leq W(\widetilde{\lm})-\#\widetilde\cutvar$, there is exactly one 12-rpp $\widetilde T$ of shape $\widetilde{\lm}$ with exactly $\widetilde m$ $1$-pure columns, exactly $\#\widetilde\cutvar$ mixed columns and exactly $(W(\widetilde{\lm})-\#\widetilde\cutvar-\widetilde m)$ $2$-pure columns. Now we want to prove the same for $\lm$.
 
 Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\cut(T)=\cutvar$ and with $m$ $1$-pure columns for $0\leq m\leq W(\lm)-\#\cutvar$. Suppose first that $m>0$. Then there is at least one $1$-pure column in $T$. Let $q+1$ be the leftmost such column for some $q\geq 0$. Then by Lemma \ref{lemma:leftRight} the columns $1,2,\dots,q$ are mixed. If $q>0$ then the supports of $i_1,i_2,\dots,i_q$ are all contained inside $[1,q+1)$ and we get a contradiction with the irreducibility of $\cutvar$. The only remaining case is that $q=0$ and the first column of $T$ is $1$-pure. Let $\widetilde\lm$ denote $\lm$ with the first column removed. Then $\cutvar$ may be not $\widetilde\lm$-reducible, because it may happen that $\#\nuxy{1}{b}=b-1$ for some $b$. In this case we can ignore these first $b-1$ mixed columns and apply the induction hypothesis. We are done with the case $m>0$. If $m<W(\lm)-\#\cutvar$ then we can apply a mirrored argument to the last column, and it remains to note that for $W(\lm)-\#\cutvar>0$ the cases $m>0$ and $m<W(\lm)-\#\cutvar$ cover everything and for $W(\lm)=\#\cutvar$ we get that $T$ is a 12-rpp with all mixed columns, but there is obviously a unique such 12-rpp.
 \end{proof}
