Oops, not my macros

--- a/groth1.tex
+++ b/groth1.tex
@@ -8044,16 +8044,16 @@ After decomposing into irreducible components, we can obtain a formula for gener
   \label{eq:thm12rppsComposite}
 \sum_{T\in\OneTwoRPPCutvar} x^{\ircont(T)}=(x_1x_2)^{M} P_{n_0}(x_1,x_2)P_{n_1}(x_1,x_2)\dots P_{n_r}(x_1,x_2),
   \end{equation}
-
-  where the numbers $M,r,n_0,\dots,n_r$ are defined above: $M=\#\cutvar$, $r+1$ is the number of irreducible components of $\cutvar$ and $n_0,n_1,\dots,n_r$ are their degrees.
+ where the numbers $M,r,n_0,\dots,n_r$ are defined above: $M=\#\cutvar$, $r+1$ is the number of irreducible components of $\cutvar$ and $n_0,n_1,\dots,n_r$ are their degrees.
 \end{corollary}
 
  For a 12-rpp $T$, the vectors $\cut(T)$ and $\ceq(T)$ uniquely determine each other: if $(\ceq(T))_i=h$ then $\cut(T)$ contains exactly $\lambda_{i+1}-\mu_i-h$ entries equal to $i$, and this correspondence is one-to-one. Therefore, the polynomials on both sides of (\ref{eq:thm12rppsComposite}) are equal to $Q_{\ceqvar}(x_1,x_2)$ where the vector $\ceqvar$ is the one that corresponds to $\cutvar$.
 
- Note that the polynomials $P_n(x_1,x_2)$ are symmetric for all $n$. Since the question about the symmetry of $\g$ can be reduced to the two-variable case, Theorem \ref{thm:12rpps} gives an alternative proof of the symmetry of $\g$:
+ Note that the polynomials $P_n(x_1,x_2)$ are symmetric for all $n$. Since the question about the symmetry of $\g_\lm$ can be reduced to the two-variable case, Theorem \ref{thm:12rpps} gives an alternative proof of the symmetry of $\g_\lm$:
 \begin{corollary}
- The polynomials $\g(x_1,x_2,x_3,\dots;\t)$ are symmetric in $(x_1,x_2,x_3\dots)$.
+ The polynomials $\g_\lm \in \kk\left[x_1, x_2, x_3, \ldots\right]$ are symmetric.
 \end{corollary}
+ This holds for any $\kk$ and any $t_1, t_2, t_3, \ldots \in \kk$, since the case we have considered (where $t_1, t_2, t_3, \ldots$ are polynomial indeterminates over $\Z$) is universal.
 
 Another application of Theorem \ref{thm:12rpps} is a complete description of Bender-Knuth involutions on rpps.
 
