--- a/groth1.tex
+++ b/groth1.tex
@@ -7942,13 +7942,13 @@ A trivial necessary condition for this to happen is that there should exist some
 (i_1,j_1),(i_1+1,j_1),(i_2,j_2),(i_2+1,j_2),\dots,(i_s,j_s),(i_s+1,j_s)\in \lm. 
 \end{equation}
 
-\newcommand{\nuxy}[2]{{\cutvar\big|_{[#1,#2)}}}
-\def\nuab{{\cutvar\big|_{[a,b)}}}
+\newcommand{\nuxy}[2]{\cutvar\big|_{[#1,#2)}}
+\def\nuab{\cutvar\big|_{[a,b)}}
 
 
 For each integer $i$ the set of all integers $j$ such that $(i,j),(i+1,j)\in\lm$ is just an interval $[\mu_{i}+1,\lambda_{i+1}]$ which we call \textit{the support of $i$} and denote $\supp(i):=[\mu_{i}+1,\lambda_{i+1}]$. For two integers $a< b$, by $\nuab$ we denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\cutvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\subset [a,b)$. In this case, we put $\#\nuab:=q+1$ which is just the number of entries in $\nuab$. For example, for $\cutvar=(4,3,3,2)$ and $\lm$ as on Figure \ref{fig:cut}, we have $\supp(3)=[3,4]$, $\supp(2)=[4,7]$, $\supp(4)=[1,4]$, $\nuxy{2}{7}=(3,3)$, $\nuxy{2}{8}=(3,3,2)$, $\nuxy{4}{8}=(2)$ and $\#\nuxy{2}{7}=2$. 
 
-We introduce several definitions (all of which depend on $\lm$): a partition $\cutvar=(i_1\geq \dots\geq i_s>0)$ is called
+We introduce several definitions: a partition $\cutvar=(i_1\geq \dots\geq i_s>0)$ is called
 
 \begin{tabular}{@{$\bullet$ }lll}
  \textit{non-representable} & if for some $a<b$ we have & $\#\nuab>b-a$;\\
@@ -7958,6 +7958,8 @@ We introduce several definitions (all of which depend on $\lm$): a partition $\c
 \end{tabular}
 
 For example, $\cutvar=(4,3,3,2)$ is representable but reducible because we have $\nuxy{3}{5}=(3,3)$ so $\#\nuxy{3}{5}=2=5-3$.
+
+Note that these notions depend on the skew-shape, so when we want to use a skew-shape $\widetilde\lm$ rather than $\lm$, we will write that $\cutvar$ is non-representable/irreducible/etc \textit{with respect to $\widetilde\lm$}, and we denote the corresponding partitions by $\nuab^{\widetilde{\lm}}$.
 
 These definitions can be motivated as follows. Suppose that a partition $\cutvar$ is non-representable, so there exist integers $a<b$ such that $\#\nuab>b-a$. Recall that $\nuab=:(i_r,i_{r+1},\dots,i_{r+q})$ contains all entries of $\cutvar$ whose support is a subset of $[a,b)$. Thus in order for condition (\ref{cond:necessary}) to be true there must exist some integers $j_r<j_{r+1}<\dots<j_{r+q}$ such that 
 $$(i_r, j_r),\dots,(i_{r+q},j_{r+q})\in\lm.$$
@@ -7971,8 +7973,9 @@ Because $\supp(i_r)\subset[a,b)$, we have $(i_r,a-1)\notin\lm$ so placing a one 
  For a partition $\cutvar$, there exist unique numbers $(1=b_0\leq a_1<b_1<a_2<b_2<\dots<a_r<b_r\leq a_{r+1}=W(\lm)+1)$ such that 
  \begin{itemize}
   \item for all $1\leq k\leq r$, $\#\nuxy{a_k}{b_k} =b_k-a_k$;
-  \item for all $0\leq k \leq r$, $\nuxy{b_k}{a_{k+1}}$ is irreducible.
+  \item for all $0\leq k \leq r$, $\nuxy{b_k}{a_{k+1}}$ is irreducible with respect to $\lm\big|_{[b_k,a_{k+1})}$,
  \end{itemize}
+ where $\lm\big|_{[b_k,a_{k+1})}$ is a skew-shape $\lm$ with columns $1,2,\dots,b_k-1,a_{k+1},a_{k+2},\dots$ removed.
 \end{lemma}\qed
 \begin{definition}
  In the context of Lemma \ref{lemma:irreducible}, for $0\leq k\leq r$ the subpartitions $\nuxy{b_k}{a_{k+1}}$ are called \textit{the irreducible components of $\cutvar$} and the numbers $n_k:=a_{k+1}-b_k-\#\nuxy{b_k}{a_{k+1}}$ are called their \textit{degrees}  (for $T$ with $\cut(T)=\cutvar$, the $k$-th degree $n_k$ is equal to the number of pure columns of $T$ inside the corresponding $k$-th irreducible component).
@@ -8094,9 +8097,9 @@ Therefore the set $\NS(T)$ contains $\{(i_1,a+1),(i_2,a+2),\dots,(i_{b-1-a},b-1)
 
 
 \begin{proof}[Proof of Theorem \ref{thm:12rpps}]
-We proceed by induction on the number of columns in $\lm$. If the number of columns is one then the statement of Theorem \ref{thm:12rpps} is obvious. Suppose that we have proven that for all skew partitions $\widetilde{\lm}$ with less than $W(\lm)$ columns and for all $\widetilde{\lm}$-irreducible partitions $\widetilde\cutvar$ and for all $0\leq \widetilde m\leq W(\widetilde{\lm})-\#\widetilde\cutvar$, there is exactly one 12-rpp $\widetilde T$ of shape $\widetilde{\lm}$ with exactly $\widetilde m$ $1$-pure columns, exactly $\#\widetilde\cutvar$ mixed columns and exactly $(W(\widetilde{\lm})-\#\widetilde\cutvar-\widetilde m)$ $2$-pure columns. Now we want to prove the same for $\lm$.
+We proceed by induction on the number of columns in $\lm$. If the number of columns is one then the statement of Theorem \ref{thm:12rpps} is obvious. Suppose that we have proven that for all skew partitions $\widetilde{\lm}$ with less than $W(\lm)$ columns and for all partitions $\widetilde\cutvar$  irreducible with respect to $\widetilde{\lm}$ and for all $0\leq \widetilde m\leq W(\widetilde{\lm})-\#\widetilde\cutvar$, there is exactly one 12-rpp $\widetilde T$ of shape $\widetilde{\lm}$ with exactly $\widetilde m$ $1$-pure columns, exactly $\#\widetilde\cutvar$ mixed columns and exactly $(W(\widetilde{\lm})-\#\widetilde\cutvar-\widetilde m)$ $2$-pure columns. Now we want to prove the same for $\lm$.
 
-Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\cut(T)=\cutvar$ and with $m$ $1$-pure columns for $0\leq m\leq W(\lm)-\#\cutvar$. Suppose first that $m>0$. Then there is at least one $1$-pure column in $T$. Let $q+1$ be the leftmost such column for some $q\geq 0$. Then by Lemma \ref{lemma:leftRight} the columns $1,2,\dots,q$ are mixed. If $q>0$ then the supports of $i_1,i_2,\dots,i_q$ are all contained inside $[1,q+1)$ and we get a contradiction with the irreducibility of $\cutvar$. The only remaining case is that $q=0$ and the first column of $T$ is $1$-pure. Let $\widetilde\lm$ denote $\lm$ with the first column removed. Then $\cutvar$ may be not $\widetilde\lm$-reducible, because it may happen that $\#\nuxy{1}{b}=b-1$ for some $b$. In this case we can ignore these first $b-1$ mixed columns and apply the induction hypothesis. We are done with the case $m>0$. If $m<W(\lm)-\#\cutvar$ then we can apply a mirrored argument to the last column, and it remains to note that for $W(\lm)-\#\cutvar>0$ the cases $m>0$ and $m<W(\lm)-\#\cutvar$ cover everything and for $W(\lm)=\#\cutvar$ we get that $T$ is a 12-rpp with all mixed columns, but there is obviously a unique such 12-rpp.
+Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\cut(T)=\cutvar$ and with $m$ $1$-pure columns for $0\leq m\leq W(\lm)-\#\cutvar$. Suppose first that $m>0$. Then there is at least one $1$-pure column in $T$. Let $q+1$ be the leftmost such column for some $q\geq 0$. Then by Lemma \ref{lemma:leftRight} the columns $1,2,\dots,q$ are mixed. If $q>0$ then the supports of $i_1,i_2,\dots,i_q$ are all contained inside $[1,q+1)$ and we get a contradiction with the irreducibility of $\cutvar$. The only remaining case is that $q=0$ and the first column of $T$ is $1$-pure. Let $\widetilde\lm$ denote $\lm$ with the first column removed. Then $\cutvar$ may not be irreducible with respect to $\widetilde{\lm}$, because it may happen that $\#\nuxy{1}{b}^{\widetilde{\lm}}=b-1$ for some $b$. In this case we can ignore these first $b-1$ mixed columns and apply the induction hypothesis. We are done with the case $m>0$. If $m<W(\lm)-\#\cutvar$ then we can apply a mirrored argument to the last column, and it remains to note that for $W(\lm)-\#\cutvar>0$ the cases $m>0$ and $m<W(\lm)-\#\cutvar$ cover everything and for $W(\lm)=\#\cutvar$ we get that $T$ is a 12-rpp with all mixed columns, but there is obviously a unique such 12-rpp.
 \end{proof}
 
 
