--- a/groth1.tex
+++ b/groth1.tex
@@ -1419,7 +1419,8 @@ and%
 \operatorname*{ircont}\left(  \mathbf{B}_{i}\left(  T\right)  \right)
 =s_{i}\cdot\operatorname*{ircont}\left(  T\right)  . \label{eq.thm.BK.ircont}%
 \end{equation}
-\footnotemark(Here, $s_{i}\cdot\operatorname*{ircont}\left(  T\right)  $ means
+\footnotemark\ (Here,
+$s_{i}\cdot\operatorname*{ircont}\left(  T\right)  $ means
 the result of the transposition $s_{i}=\left(  i,i+1\right)  \in
 \mathfrak{S}_{\left(  \infty\right)  }$ acting on the weak composition
 $\operatorname*{ircont}\left(  T\right)  $.)
@@ -9877,7 +9878,7 @@ and all but finitely many $Q_\ceqvar(x_1,x_2)$ are $0$.
 
 We shall show that each $Q_\ceqvar(x_1,x_2)$ is either zero or has the form
 $$Q_\ceqvar(x_1,x_2)=(x_1x_2)^{M} P_{n_0}(x_1,x_2)P_{n_1}(x_1,x_2)\cdots P_{n_r}(x_1,x_2) ,$$
-where $M,r$ and $n_0,n_1,\dots,n_{r}$ are integers naturally associated to $\ceqvar$ and $\lm$ and 
+where $M,r$ and $n_0,n_1,\dots,n_{r}$ are nonnegative integers naturally associated to $\ceqvar$ and $\lm$ and 
 $$P_n(x_1,x_2)=(x_1^{n+1}-x_2^{n+1})/(x_1-x_2)=x_1^{n}+x_1^{n-1}x_2+\dots+x_1x_2^{n-1}+x_2^n.$$
 We fix the skew partition $\lm$ throughout the whole section.
 Abusing notation, we shall abbreviate $Y\left(\lm\right)$ as $\lm$.
@@ -9887,7 +9888,10 @@ We will have a running example with $\lambda=(7,7,7,4,4)$ and $\mu=(5,3,2)$.
 
 
 \subsection{Irreducible components}
-Given an rpp $T$, consider the set $\NS(T)$ of all cells $(i,j)\in \lm$ such that $T(i,j)=1$ but $T(i+1,j)=2$ (in other words, $\NS(T)$ is the set of all non-stagnant cells in $T$ filled with a $1$). Clearly, $\NS(T)$ contains at most one cell from each column; thus, let us write $\NS(T)=\{(i_1,j_1),(i_2,j_2),\dots,(i_s,j_s)\}$ with $j_1<j_2<\dots<j_s$. Because $T$ is a 12-rpp, it follows that the numbers $i_1,i_2,\dots,i_s$ decrease weakly, therefore they form a partition which we call \textit{the cut-partition of} $T$ and denote 
+We recall that a \textit{12-rpp} means an rpp whose entries all belong to the set $\left\{1, 2\right\}$.
+
+Given a 12-rpp $T$, consider the set $\NS(T)$ of all cells $(i,j)\in \lm$ such that $T(i,j)=1$ but $(i+1,j) \in \lm$ and $T(i+1,j)=2$. (In other words, $\NS(T)$ is the set of all non-stagnant cells in $T$ which are filled with a $1$ and which are not the lowest cells in their columns.)
+Clearly, $\NS(T)$ contains at most one cell from each column; thus, let us write $\NS(T)=\{(i_1,j_1),(i_2,j_2),\dots,(i_s,j_s)\}$ with $j_1<j_2<\dots<j_s$. Because $T$ is a 12-rpp, it follows that the numbers $i_1,i_2,\dots,i_s$ decrease weakly, therefore they form a partition which we call \textit{the cut-partition of} $T$ and denote 
 $$\cut(T):=(i_1,i_2,\dots,i_s).$$ 
 An example of calculation of $\cut(T)$ and $\NS(T)$ is illustrated on Figure \ref{fig:cut}.
 
@@ -9915,12 +9919,12 @@ An example of calculation of $\cut(T)$ and $\NS(T)$ is illustrated on Figure \re
 $\NS(T_1)=\{(4,1),(3,3),(3,4),(2,6)\}$ & $\NS(T_2)=\{(4,2),(3,3),(3,4),(2,7)\}$ \\
 $\cut(T_1)=(4,3,3,2)$ & $\cut(T_2)=(4,3,3,2)$ 
 \end{tabular}\\
-\caption{\label{fig:cut} Two rpps of the same shape and with the same cut-partition.}
+\caption{\label{fig:cut} Two 12-rpps of the same shape and with the same cut-partition.}
 \end{figure}
 
 
 
-We would like to answer the following question: for which partitions $\cutvar=(i_1\geq \dots\geq i_s>0)$ there exists an rpp $T$ of shape $\lm$ such that $\cut(T)=\cutvar$?
+We would like to answer the following question: for which partitions $\cutvar=(i_1\geq \dots\geq i_s>0)$ does there exist a 12-rpp $T$ of shape $\lm$ such that $\cut(T)=\cutvar$?
 
 A trivial necessary condition for this to happen is that there should exist some numbers $j_1<j_2<\dots<j_s$ such that 
 \begin{equation}\label{cond:necessary}
@@ -9975,7 +9979,9 @@ Because $\supp(i_r)\subset[a,b)$, we have $(i_r,a-1)\notin\lm$ so placing a one 
 
 
 \subsection{The structural theorem and its applications}
-It is easy to see that for a 12-rpp $T$, $\#\cut(T)$ is equal to the number of mixed columns in $T$. Also, by $\OneTwoRPP$ denote the set of all 12-rpps $T$ of shape $\lm$ and by $\OneTwoRPPCutvar$ denote its subset that contains only 12-rpps $T$ with $\cut(T)=\cutvar$. Now we are ready to state a theorem that completely describes the structure of irreducible components:
+It is easy to see that for a 12-rpp $T$, the number $\#\cut(T)$ is equal to the number of mixed columns in $T$.
+
+Let $\OneTwoRPP$ denote the set of all 12-rpps $T$ of shape $\lm$, and let $\OneTwoRPPCutvar$ denote its subset that contains only 12-rpps $T$ with $\cut(T)=\cutvar$. Now we are ready to state a theorem that completely describes the structure of irreducible components:
 \begin{theorem}
 \label{thm:12rpps}
  Let $\cutvar$ be an irreducible partition. Then for all $0\leq m\leq W(\lm)-\#\cutvar$ there is exactly one 12-rpp $T\in\OneTwoRPPCutvar$ with $\#\cutvar$ mixed columns, $m$ $1$-pure columns and $(W(\lm)-\#\cutvar-m)$ $2$-pure columns. Moreover, these are the only elements of $\OneTwoRPPCutvar$. In other words, for an irreducible partition $\cutvar$ we have
