--- a/groth1.tex
+++ b/groth1.tex
@@ -9858,6 +9858,7 @@ influence.)
 \def\lmp{{(\lambda/\mu)}}
 \def\N{{\mathbb{N}}}
 \def\Z{\mathbb{Z}}
+\def\xx{{\mathbf{x}}}
 
 \def\OneTwoRPP{{\operatorname*{RPP}^{12}\left(  \lambda/\mu\right)}}
 \def\OneTwoRPPCutvar{{\operatorname*{RPP}^{12}\left(  \lambda/\mu ;\seplistvar \right)}}
@@ -9931,6 +9932,7 @@ A trivial necessary condition for this to happen is that there should exist some
 \begin{equation}\label{cond:necessary}
 (i_1,j_1),(i_1+1,j_1),(i_2,j_2),(i_2+1,j_2),\dots,(i_s,j_s),(i_s+1,j_s)\in \lm. 
 \end{equation}
+We say that a partition $\seplistvar$ is \textit{admissible} if it satisfies (\ref{cond:necessary}).
 
 \newcommand{\nuxy}[2]{\seplistvar\big|_{\subset[#1,#2)}}
 \newcommand{\nuxycap}[2]{\seplistvar\big|_{\cap[#1,#2)}}
@@ -9940,19 +9942,21 @@ A trivial necessary condition for this to happen is that there should exist some
 
 
 
-For each integer $i$ the set of all integers $j$ such that $(i,j),(i+1,j)\in\lm$ is just an interval $[\mu_{i}+1,\lambda_{i+1}]$ which we call \textit{the support of $i$} and denote $\supp(i):=[\mu_{i}+1,\lambda_{i+1}]$. For two integers $a< b$, by $\nuab$ we denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\subset [a,b)$. In this case, we put $\#\nuab:=q+1$ which is just the number of entries in $\nuab$. Similarly, we put $\nuabcap$ to be the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\cap [a,b)\neq\emptyset$.
+For each integer $i$ the set of all integers $j$ such that $(i,j),(i+1,j)\in\lm$ is just an interval $[\mu_{i}+1,\lambda_{i+1}]$, which we call \textit{the support of $i$} and denote $\supp(i):=[\mu_{i}+1,\lambda_{i+1}]$.
+
+Assume that $\seplistvar$ is an admissible partition. For two integers $a< b$, by $\nuab$ we denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\subset [a,b)$. In this case, we put $\#\nuab:=q+1$ which is just the number of entries in $\nuab$. Similarly, we put $\nuabcap$ to be the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$ such that for $r\leq k\leq r+q$ we have $\supp(i_k)\cap [a,b)\neq\emptyset$.
 For example, for $\seplistvar=(4,3,3,2)$ and $\lm$ as on Figure \ref{fig:seplist}, we have 
 $$\supp(3)=[3,4],\ \supp(2)=[4,7],\ \supp(4)=[1,4],$$ 
 $$\nuxy{2}{7}=(3,3),\ \nuxy{2}{8}=(3,3,2),\ \nuxy{4}{8}=(2),\ \nuxycap{4}{5}=(4,3,3,2),\ \#\nuxy{2}{7}=2.$$
 
-We introduce several definitions: a partition $\seplistvar=(i_1\geq \dots\geq i_s>0)$ is called
+We introduce several definitions: An admissible partition $\seplistvar=(i_1\geq \dots\geq i_s>0)$ is called
 
 \begin{tabular}{@{$\bullet$ }lll}
  \textit{non-representable} & if for some $a<b$ we have & $\#\nuab>b-a$;\\
  \textit{representable}& if for all $a<b$ we have& $\#\nuab\leq b-a$;\\
 \end{tabular}
 
-a representable partition is called
+a representable partition $\seplistvar$ is called
 
 \begin{tabular}{@{$\bullet$ }lll} 
  \textit{irreducible}& if for all  $a<b$ we have &$\#\nuab < b-a$;\\
@@ -9961,21 +9965,24 @@ a representable partition is called
 
 For example, $\seplistvar=(4,3,3,2)$ is representable but reducible because we have $\nuxy{3}{5}=(3,3)$ so $\#\nuxy{3}{5}=2=5-3$.
 
-Note that these notions depend on the skew partition; thus, when we want to use a skew partition $\widetilde\lm$ rather than $\lm$, we will write that $\seplistvar$ is non-representable/irreducible/etc \textit{with respect to $\widetilde\lm$}, and we denote the corresponding partitions by $\nuab^{\widetilde{\lm}}$.
+Note that these notions depend on the skew partition; thus, when we want to use a skew partition $\widetilde\lm$ rather than $\lm$, we will write that $\seplistvar$ is non-representable/irreducible/etc. \textit{with respect to $\widetilde\lm$}, and we denote the corresponding partitions by $\nuab^{\widetilde{\lm}}$.
 
 These definitions can be motivated as follows. Suppose that a partition $\seplistvar$ is non-representable, so there exist integers $a<b$ such that $\#\nuab>b-a$. Recall that $\nuab=:(i_r,i_{r+1},\dots,i_{r+q})$ contains all entries of $\seplistvar$ whose support is a subset of $[a,b)$. Thus in order for condition (\ref{cond:necessary}) to be true there must exist some integers $j_r<j_{r+1}<\dots<j_{r+q}$ such that 
-$$(i_r, j_r),\dots,(i_{r+q},j_{r+q})\in\lm.$$
+$$(i_r, j_r),(i_r+1, j_r),\dots,(i_{r+q},j_{r+q}),(i_{r+q}+1,j_{r+q})\in\lm.$$
 On the other hand, by the definition of the support, we must have $j_k\in \supp(i_k)\subset [a,b)$ for all $r\leq k\leq r+q$. Therefore we get $q+1$ distinct elements of $[a,b)$ which is impossible if $q+1=\#\nuab>b-a$. It means that a non-representable partition $\seplistvar$ is never a seplist-partition of a 12-rpp $T$. 
 
 Suppose now that a partition $\seplistvar$ is reducible, so for some $a<b$ we get an equality $\#\nuab=b-a$. Then these integers $j_r<\dots<j_{r+q}$ should still all belong to $[a,b)$ and there are exactly $b-a$ of them, hence 
-$$j_r=a,j_{r+1}=a+1,\dots,j_{r+q}=a+q=b-1.$$
-Because $\supp(i_r)\subset[a,b)$, we have $(i_r,a-1)\notin\lm$ so placing a one into $(i_r,a)$ and twos into $(i_r+1,a),(i_r+2,a),\dots$ does not put any restictions on entries in columns $1,\dots, a-1$. And the same is true for columns $b,b+1,\dots$. Thus, if a partition $\seplistvar$ is reducible then the filling of columns $a,a+1,\dots, b-1$ is uniquely determined and the filling of the rest can be arbitrary -- the problem of existence of and 12-rpp $T$ such that $\seplist(T)=\seplistvar$ reduces to two smaller independent problems of the same kind. One can continue this reduction process and end up with several independent irreducible components separated from each other by mixed columns. An illustration of this phenomenon can be seen on Figure \ref{fig:seplist}: the columns $3$ and $4$ must be mixed for any 12-rpps $T$ with $\seplist(T)=(4,3,3,2)$. We summarize our observations in the follwing lemma:
+\begin{equation}
+j_r=a,\ j_{r+1}=a+1,\ \dots,\ j_{r+q}=a+q=b-1 .
+\label{eq.reducible.mixblock-j}
+\end{equation}
+Because $\supp(i_r)\subset[a,b)$ but $\supp(i_r)\neq\varnothing$ (since $\nu$ is admissible), we have $(i_r,a-1)\notin\lm$. Thus, placing a $1$ into $(i_r,a)$ and $2$'s into $(i_r+1,a),(i_r+2,a),\dots$ does not put any restrictions on entries in columns $1,\dots, a-1$. And the same is true for columns $b,b+1,\dots$ when we place a $2$ into $(i_{r+q},b)$ and $1$'s into all cells above. Thus, if a partition $\seplistvar$ is reducible then the filling of columns $a,a+1,\dots, b-1$ is uniquely determined (by (\ref{eq.reducible.mixblock-j})), and the filling of the rest can be arbitrary -- the problem of existence of a 12-rpp $T$ such that $\seplist(T)=\seplistvar$ reduces to two smaller independent problems of the same kind. One can continue this reduction process and end up with several independent irreducible components separated from each other by mixed columns. An illustration of this phenomenon can be seen on Figure \ref{fig:seplist}: the columns $3$ and $4$ must be mixed for any 12-rpps $T$ with $\seplist(T)=(4,3,3,2)$. We summarize our observations in the follwing lemma:
 \begin{lemma}
 \label{lemma:irreducible}
  For a representable partition $\seplistvar$, there exist unique numbers $(1=b_0\leq a_1<b_1<a_2<b_2<\dots<a_r<b_r\leq a_{r+1}=\lambda_1+1)$ such that 
  \begin{enumerate}
-  \item for all $1\leq k\leq r$, $\#\nuxy{a_k}{b_k} =b_k-a_k$;
-  \item The set $\cup_{k=0}^{r}[b_k,a_k+1)$ is maximal by inclusion among all sequences $(1=b_0\leq a_1<b_1<a_2<b_2<\dots<a_r<b_r\leq a_{r+1}=\lambda_1+1)$ satisfying property 1.
+  \item for all $1\leq k\leq r$, we have $\#\nuxy{a_k}{b_k} =b_k-a_k$;
+  \item The set $\bigcup_{k=0}^{r}[b_k,a_{k+1})$ is maximal by inclusion among all sequences $(1=b_0\leq a_1<b_1<a_2<b_2<\dots<a_r<b_r\leq a_{r+1}=\lambda_1+1)$ satisfying property 1.
  \end{enumerate}
  In this case, the partitions $\nuxycap{b_k}{a_{k+1}}$ are irreducible with respect to $\lm\big|_{[b_k,a_{k+1})}$,
  which is the skew partition $\lm$ with columns $1,2,\dots,b_k-1,a_{k+1},a_{k+2},\dots$ removed.
@@ -10002,7 +10009,7 @@ Let $\OneTwoRPP$ denote the set of all 12-rpps $T$ of shape $\lm$, and let $\One
  Let $\seplistvar$ be an irreducible partition. Then for all $0\leq m\leq \lambda_1-\#\seplistvar$ there is exactly one 12-rpp $T\in\OneTwoRPPCutvar$ with $\#\seplistvar$ mixed columns, $m$ $1$-pure columns and $(\lambda_1-\#\seplistvar-m)$ $2$-pure columns. Moreover, these are the only elements of $\OneTwoRPPCutvar$. In other words, for an irreducible partition $\seplistvar$ we have
   \begin{equation}
  \label{eq:thm12rpps}
- \sum_{T\in\OneTwoRPPCutvar} x^{\ircont(T)}=(x_1x_2)^{\#\seplistvar} P_{\lambda_1-\#\seplistvar}(x_1,x_2).
+ \sum_{T\in\OneTwoRPPCutvar} \xx^{\ircont(T)}=(x_1x_2)^{\#\seplistvar} P_{\lambda_1-\#\seplistvar}(x_1,x_2).
  \end{equation}
 \end{theorem}
 
@@ -10051,7 +10058,7 @@ After decomposing into irreducible components, we can obtain a formula for gener
  Let $\seplistvar$ be a representable partition. Then
   \begin{equation}
   \label{eq:thm12rppsComposite}
-\sum_{T\in\OneTwoRPPCutvar} x^{\ircont(T)}=(x_1x_2)^{M} P_{n_0}(x_1,x_2)P_{n_1}(x_1,x_2)\dots P_{n_r}(x_1,x_2),
+\sum_{T\in\OneTwoRPPCutvar} \xx^{\ircont(T)}=(x_1x_2)^{M} P_{n_0}(x_1,x_2)P_{n_1}(x_1,x_2)\dots P_{n_r}(x_1,x_2),
   \end{equation}
  where the numbers $M,r,n_0,\dots,n_r$ are defined above: $M=\#\seplistvar$, $r+1$ is the number of irreducible components of $\seplistvar$ and $n_0,n_1,\dots,n_r$ are their degrees.
 \end{corollary}
@@ -10091,7 +10098,7 @@ Finally, notice that for a general representable partition $\seplistvar$ conflic
 \end{corollary}
 
 \subsection{The proof}
-Recall that $\seplistvar=(i_1,\dots,i_s)$ is an irreducible partition. We start with the following simple observation:
+Let $\seplistvar=(i_1,\dots,i_s)$ be an irreducible partition. We start with the following simple observation:
 \begin{lemma}
 \label{lemma:leftRight}
  Let $T\in\OneTwoRPPCutvar$. Then any $1$-pure column of $T$ is to the left of any $2$-pure column of $T$.
@@ -10110,10 +10117,6 @@ Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\seplist(T)=\seplistvar$ and with $
 
 
 
-
-\begin{todo}
-Mention failure of order-$6$ relation?
-\end{todo}
 
 \begin{thebibliography}{99999999}                                                                                         %
 
